--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "color",
+  "name": "color-zones",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mcnedward/color.git"
+    "url": "https://github.com/mcnedward/color-zones.git"
   },
   "author": "Edward McNealy",
   "license": "ISC",
